# Simol

./: #CMakeLists.txt#  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README  config-example.cmake  errors.txt  launcher_cluster  launcher_cluster.sh  launcher_galerkin.sh  launcher_trichain.sh
cmake/arpack/: CMakeLists.txt
cmake/config/: CMakeLists.txt  README  config-ci.cmake  config-generic.cmake  config-sourcesup.cmake  config-template.cmake  config.cmake
src/: CMakeLists.txt  SparseMatrix.hpp  SparseMatrix_fwd.hpp  SparseMatrix_inline.hpp  Tools.cpp  Vector.hpp  Vector_fwd.hpp  Vector_impl.hpp  main.cpp  vector.hpp
src/LinearAlgebra/: Vector_impl.hpp
src/ODE/: verlet.hpp
src/StatisticalPhysics/: Particle.hpp  Potential.hpp  Potential_fwd.hpp
src/core/: CMakeLists.txt  Matrix.hpp  SparseMatrix.hpp  SparseMatrix_impl.hpp  Vector.hpp  VectorWrapper.hpp  VectorWrapper_fwd.hpp  Vector_fwd.hpp  Vector_impl.hpp  dsaupd.hpp  dseupd.hpp  eigen.hpp  fromEigen.hpp  matrix.hpp  stl.hpp
src/core/io/: CommandLine.hpp  MatrixMarketFile.hpp  mmio.c
src/core/linalg/: DenseMatrix.hpp  DenseMatrix_eigen.hpp  EigenDecomposition.hpp  EigenSolver.hpp  Matrix.hpp  SparseMatrix.hpp  SparseMatrix_eigen.hpp  SparseMatrix_fwd.hpp  SparseMatrix_impl.hpp  SparseTensor.cpp  SparseTensor.hpp  Vector.cpp  Vector.hpp  Vector.ipp  Vector_eigen.hpp  Vector_fwd.hpp  arpack.hpp  dseupd.hpp  eigen.hpp
src/core/ode/: verlet.hpp  verlet.ipp  verlet_impl.hpp
src/core/quantchem/: SchrodingerHamiltonian.hpp  SlaterDeterminant.hpp  SparseTensor.hpp  hartree_fock.hpp
src/core/random/: RNG.hpp  normal_distribution.hpp
src/core/statphys/: AtomChain.hpp  HamiltonDynamics.hpp  HamiltonDynamics.ipp  HamiltonianDynamics.hpp  HamiltonianDynamics.ipp  Particle.hpp  Particle.ipp  ParticleSystem.hpp  ParticleSystem.ipp  Particle_impl.hpp  Potential.hpp  Potential.ipp  atomChain.hpp  controlVariate.cpp  controlVariate.hpp  dynamics.cpp  dynamics.hpp  galerkin.cpp  galerkin.hpp  input.cpp  input.hpp  multiSystem.cpp  multiSystem.hpp  output.cpp  output.hpp  particle.cpp  particle.hpp  particle.ipp  particleSystem.cpp  particleSystem.hpp  particleSystem.ipp  potential.cpp  potential.hpp  potential.ipp  statistics.cpp  statistics.hpp  tools.hpp
src/dynamics/: BoundaryLangevin.cpp  DPDE.cpp  Dynamics.cpp  Hamiltonian.cpp  Langevin.cpp  LangevinBase.cpp  Overdamped.cpp
src/input/: Input.cpp  Input_dynamics.cpp  Input_output.cpp  Input_potential.cpp  Input_system.cpp  Input_time.cpp
src/modules/: CMakeLists.txt
src/modules/quantchem/: SchrodingerHamiltonian.hpp  TensorFile.hpp  hartree_fock.hpp
src/modules/statphys/: CMakeLists.txt  controlVariate.cpp  controlVariate.hpp  dynamics.hpp  galerkin.cpp  input.cpp  input.hpp  multiSystem.cpp  output.cpp  particleSystem.hpp  potential.cpp  potential.hpp
src/output/: Observables.cpp  Output.cpp  Output_NBody.cpp  Output_chain.cpp  Output_controlVariates.cpp  Statistics.cpp
src/potential/: AllPotentials.cpp  Coulomb.cpp  DoubleWell.cpp  Drift.cpp  FPU.cpp  FracSinusoidal.cpp  Harmonic.cpp  LennardJones.cpp  Potential.cpp  Rotor.cpp  Shearing.cpp  Sinusoidal.cpp  SoftDPD.cpp  SpaceSine.cpp  SumSinusoidal.cpp
src/quantchem/: CMakeLists.txt  DiscreteHamiltonian.cpp  DiscreteHamiltonian.hpp  SchrodingerHamiltonian.hpp  SlaterDeterminant.cpp  SlaterDeterminant.hpp  SparseTensor.cpp  SparseTensor.hpp  hartree_fock.hpp
src/simulation/: Simulation.cpp
src/statistical_physics/: Particle.hpp  ParticleSystem.hpp  ParticleSystem_fwd.hpp  ParticleSystem_impl.hpp  Particle_fwd.hpp  Particle_impl.hpp  Potential.hpp  Potential_impl.hpp
src/statphys/: CMakeLists.txt  Simulation.hpp  TensorTools.cpp  Tools.cpp  Tools.hpp  basis.cpp  basis.hpp  controlVariate.cpp  controlVariate.hpp  dynamics.cpp  dynamics.hpp  galerkin.cpp  galerkin.hpp  input.cpp  input.hpp  multiSystem.cpp  multiSystem.hpp  output.cpp  output.hpp  particle.cpp  particle.hpp  particleSystem.cpp  particleSystem.hpp  potential.cpp  potential.hpp  simulation.cpp  simulation.hpp  statistics.cpp  statistics.hpp  tools.cpp  tools.hpp
src/statphys/controlVariate/: AllGalerkins.cpp  Basis.cpp  Basis.hpp  CVBasis.cpp  ControlVariate.cpp  ControlVariate.hpp  Galerkin.cpp  Galerkin.hpp  LangevinGalerkin.cpp  Operator.cpp  OverdampedGalerkin.cpp  basis.cpp  basis.hpp  controlVariate.cpp  controlVariate.hpp  galerkin.cpp  galerkin.hpp
src/statphys/dynamics/: BoundaryLangevin.cpp  BoundaryLangevin.hpp  DPDE.cpp  DPDE.hpp  Dynamics.cpp  Dynamics.hpp  Hamiltonian.cpp  Hamiltonian.hpp  Langevin.cpp  Langevin.hpp  LangevinBase.cpp  LangevinBase.hpp  OverDamped.hpp  Overdamped.cpp  StochasticDynamics.cpp  StochasticDynamics.hpp  UniformStochasticDynamics.cpp  UniformStochasticDynamics.hpp  dpde.hpp  dynamics.cpp  dynamics.hpp
src/statphys/input/: Input.cpp  Input.hpp  Input_controlVariate.cpp  Input_dynamics.cpp  Input_output.cpp  Input_potential.cpp  Input_system.cpp  Input_time.cpp  input.cpp  input.hpp
src/statphys/output/: Observables.cpp  Output.cpp  Output.hpp  Output_NBody.cpp  Output_chain.cpp  Output_controlVariates.cpp  Statistics.cpp  Statistics.hpp  output.cpp  output.hpp  statistics.cpp  statistics.hpp
src/statphys/potential/: AllPotentials.cpp  Coulomb.cpp  DoubleWell.cpp  Drift.cpp  FPU.cpp  FPU.hpp  FracSinusoidal.cpp  FracSinusoidal.hpp  Harmonic.cpp  LennardJones.cpp  LennardJones.hpp  Potential.cpp  Potential.hpp  Rotor.cpp  Rotor.hpp  Shearing.cpp  Sinusoidal.cpp  Sinusoidal.hpp  SoftDPD.cpp  SpaceSine.cpp  SpaceSinus.cpp  SpaceSinus.hpp  SumSinusoidal.cpp  SumSinusoidal.hpp  potential.cpp  potential.hpp
src/statphys/simulation/: Simulation.cpp  Simulation.hpp  (+6 more)
src/system/: Bicolor.cpp  Chain.cpp  Colloid.cpp  Isolated.cpp  NBody.cpp  Particle.cpp  System.cpp
test/: CMakeLists.txt
test/data/: identity5.mtx
test/functional/: CMakeLists.txt
test/unit/: CMakeLists.txt  DenseMatrixTest.hpp  EigenSolverTest.hpp  MatrixMarketFileTest.cpp  MatrixMarketFileTest.hpp  SparseMatrixTest.cpp  SparseMatrixTest.hpp  SymSparseMatrixTest.cpp  SymSparseMatrixTest.hpp  VectorTest.cpp  test_simol.cpp
(+637 files in other folders)
