add_executable(test_galerkin galerkin/main.cpp)
add_executable(test_dpde moldyn/dpde/TestDPDE.cpp)
add_executable(test_langevin moldyn/langevin/TestLangevin.cpp)
add_executable(test_hamiltonian moldyn/langevin/TestHamiltonian.cpp)
add_executable(test_rotor moldyn/chain/TestRotor.cpp)
add_executable(test_trichain moldyn/chain/TestTriChain.cpp)
add_executable(test_bichainfpu moldyn/chain/TestBiChainFPU.cpp)
